chore: update plop files for generate test-id

--- a/generators/templates/Component.tsx.hbs
+++ b/generators/templates/Component.tsx.hbs
@@ -2,7 +2,7 @@ import { Box } from '@mui/material'
 
 const {{pascalCase name}} = () => {
     return (
-    <Box>
+    <Box data-testid='{{snakeCase name}}-id'>
       {{pascalCase name}}
     </Box>
   )
