--- a/generators/templates/test.tsx.hbs
+++ b/generators/templates/test.tsx.hbs
@@ -3,11 +3,8 @@ import { render, screen } from '@testing-library/react'
 import {{pascalCase name}} from '.'
 
 describe('<{{pascalCase name}} />', () => {
-  it('should render the heading', () => {
-    const { container } = render(<{{pascalCase name}} />)
-
-    expect(screen.getByRole('heading', { name: /{{pascalCase name}}/i })).toBeInTheDocument()
-
-    expect(container.firstChild).toMatchSnapshot()
+  it('should render {{pascalCase name}} component', () => {
+    render(<{{pascalCase name}} />)
+    expect(screen.getByTestId("{{snakeCase name}}-id")).toBeInTheDocument()
   })
 })
