chore: add plop for export index and logo

--- a/generators/templates/Component.tsx.hbs
+++ b/generators/templates/Component.tsx.hbs
@@ -1,6 +1,6 @@
 import { Box } from '@mui/material'
 
-const {{pascalCase name}} = () => {
+export const {{pascalCase name}} = () => {
     return (
     <Box data-testid='{{snakeCase name}}-id'>
       {{pascalCase name}}
